feat: logos added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>GI-Rec</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="assets/favicon.ico" sizes="any">
   <link rel="preload" href="tiers/ss.png" as="image">
   <link rel="preload" href="tiers/s.png" as="image">
   <link rel="preload" href="tiers/A.png" as="image">
@@ -19,6 +21,7 @@
     <div class="ui-scale-inner">
       <header class="app-header">
         <div class="brand">
+          <img src="assets/logo.svg" alt="GI-Rec" class="logo-img" width="32" height="32" />
       <div class="titles">
         <div class="app-title">GI-Rec</div>
   <div class="app-subtitle">recommendations & tier list</div>
