feat: Best Teams mode added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
           <div class="side-nav" role="tablist" aria-label="View switcher">
             <a href="#recommendations" class="nav-link" data-view="recommendations" role="tab">Recommendations</a>
             <a href="#tierlist" class="nav-link" data-view="tierlist" role="tab">Tier List</a>
-            <a href="#team-suggestions" class="nav-link" data-view="team-suggestions" role="tab">Team Suggestions</a>
+            <a href="#team-builder" class="nav-link" data-view="team-builder" role="tab">Team Builder</a>
+            <a href="#best-teams" class="nav-link" data-view="best-teams" role="tab">Best Teams</a>
           </div>
         </div>
         <div class="side-card">
