feat: Flins, Macroses, Disabled Characters

--- a/index.html
+++ b/index.html
@@ -71,10 +71,15 @@
         </div>
         <div id="good-status" class="small muted"></div>
         <div id="owned-filters" class="filter-bar" aria-label="Filter owned characters"></div>
-        <div id="characters" class="characters-grid" aria-live="polite"></div>
-        <div class="side-actions">
-          <button id="clear" type="button">Clear selection</button>
+        <div class="macro-buttons">
+          <button id="macro-free" type="button" class="macro-btn">All free</button>
+          <button id="macro-4star" type="button" class="macro-btn">All 4*</button>
+          <button id="macro-standard" type="button" class="macro-btn">All Standart 5*</button>
+          <button id="macro-all" type="button" class="macro-btn">All</button>
+          <button id="macro-clear" type="button" class="macro-btn">Clear all</button>
+          <button id="macro-restore" type="button" class="macro-btn">Return to config</button>
         </div>
+        <div id="characters" class="characters-grid" aria-live="polite"></div>
       </div>
 
       <div class="side-card">
