google verification added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="preload" href="tiers/D.png" as="image">
   <meta name="theme-color" content="#071129" />
   <meta name="description" content="Team recommendations and global tier list based on your owned characters." />
+  <meta name="google-site-verification" content="w_BVX_LixZxsMDchOwOxdTt8_qguxBBDL6lybjwWcn4" />
 </head>
 <body>
   <div class="ui-scale">
