--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>GI-Rec</title>
+  <title>GI-Rec - Genshin Impact Character Pulling Recommendations & Tier Lists</title>
+  <meta name="description" content="Genshin Impact character pulling recommendations and tier list based on your owned characters.">
+  <meta name="keywords" content="Genshin Impact, character recommendations, tier list, pulling guide">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://senjeyb.github.io/gi-rec/">
+  <meta property="og:title" content="Genshin Impact Character Pulling Recommendations & Tier Lists">
+  <meta property="og:description" content="Genshin Impact character pulling recommendations and tier list based on your owned characters.">
+  <meta property="og:image" content="https://senjeyb.github.io/gi-rec/preview.png">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://senjeyb.github.io/gi-rec/">
+  <meta property="twitter:title" content="Genshin Impact Character Pulling Recommendations & Tier Lists">
+  <meta property="twitter:description" content="Genshin Impact character pulling recommendations and tier list based on your owned characters.">
+  <meta property="twitter:image" content="https://senjeyb.github.io/gi-rec/preview.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="icon" href="assets/favicon.ico" sizes="any">
