--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>GI-Rec - Genshin Impact Character Pulling Recommendations & Tier Lists</title>
   <meta name="description" content="Genshin Impact character pulling recommendations and tier list based on your owned characters.">
-  <meta name="keywords" content="Genshin Impact, character recommendations, tier list, pulling guide">
+  <meta name="keywords" content="GI-Rec, girec, gi rec, Genshin Impact, character recommendations, tier list, pulling guide, recommendations, team builder, best teams, team suggestions, character compositions">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://senjeyb.github.io/gi-rec/">
   <meta property="og:title" content="Genshin Impact Character Pulling Recommendations & Tier Lists">
