index.html feats

--- a/index.html
+++ b/index.html
@@ -125,6 +125,26 @@
   </div>
 
   <script src="app.js"></script>
+  <script type="application/ld+json" id="structured-data">
+    {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "Genshin Impact Character Pulling Recommendations & Tier Lists",
+        "description": "Genshin Impact character pulling recommendations and tier list based on your owned characters.",
+        "url": "https://senjeyb.github.io/gi-rec/",
+        "applicationCategory": "Game",
+        "operatingSystem": "Web",
+        "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+        },
+        "author": {
+            "@type": "Person",
+            "name": "Senjey"
+        }
+    }
+  </script>
   <div id="updates-modal" class="modal" hidden>
     <div class="modal-backdrop"></div>
     <div class="modal-dialog">
